--- a/src/components/containers/ServersInfoContainer.module.css
+++ b/src/components/containers/ServersInfoContainer.module.css
@@ -3,3 +3,9 @@
   min-width: 550px;
   max-width: 800px;
 }
+
+.buttonDiv {
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
+}
